# streamlit-mediapipe-solution-sample

./: Makefile  README.md  app.py  pyproject.toml
